--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "develop": "gatsby develop",
     "build": "gatsby build",
     "type-check": "tsc --noEmit",
-    "lint": "tslint --project .",
+    "lint": "eslint '**/*.{js,jsx,ts,tsx}'",
     "prettify": "prettier --write 'src/**/*.{tsx,ts,jsx,js}'"
   },
   "dependencies": {
@@ -25,10 +25,17 @@
     "@types/node": "^10.3.1",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@typescript-eslint/eslint-plugin": "2.x",
+    "@typescript-eslint/parser": "2.x",
+    "babel-eslint": "10.x",
+    "eslint": "6.x",
+    "eslint-config-react-app": "^5.1.0",
+    "eslint-plugin-flowtype": "3.x",
+    "eslint-plugin-import": "2.x",
+    "eslint-plugin-jsx-a11y": "6.x",
+    "eslint-plugin-react": "7.x",
+    "eslint-plugin-react-hooks": "1.x",
     "prettier": "1.18.2",
-    "tslint": "^5.10.0",
-    "tslint-config-prettier": "^1.13.0",
-    "tslint-react": "^3.6.0",
     "typescript": "^2.9.1"
   }
 }
