--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,15 @@
   "include": ["./src/**/*"],
   "compilerOptions": {
     "target": "esnext",
-    "module": "commonjs",
+    "module": "esnext",
     "lib": ["dom", "es2017"],
-    // "allowJs": true,
-    // "checkJs": true,
     "jsx": "react",
     "strict": true,
     "esModuleInterop": false,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "noEmit": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "node"
   }
 }
